2022-10-07 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/cc1_dummies.cc:
	  Add two more dummies.

2022-10-03 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/gcc_attr.h:
	  Use C23 version macro.

2022-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/MakeList:
	  Disable a test for pdk14 that fails due to lack of memory on the target device.

2022-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Use mov in more cases, patch by Basil Hussain.
	* device/include/assert.h:
	  Fix static_assert for C11.

2022-09-25 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCmain.c,
	  support/cpp/libcpp/init.cc:
	  Fix handling of c2x standard for preprocessor.
	* device/include/stdlib.h,
	  device/lib/Makefile.in,
	  device/lib/__stdc_count_leading_zeros.c,
	  device/lib/__stdc_first_leading_one.c,
	  device/lib/__stdc_first_trailing_oneull.c,
	  device/lib/_divslonglong.c,
	  device/lib/_divulonglong.c,
	  device/lib/_modslonglong.c,
	  device/lib/_mullonglong.c,
	  device/lib/_rlslonglong.c,
	  device/lib/_rlulonglong.c,
	  device/lib/_rrslonglong.c,
	  device/lib/_rrulonglong.c,
	  device/lib/aligned_alloc.c,
	  device/lib/*/Makefile.in,
	  device/lib/ds390/lcd390.c,
	  device/lib/printf_large.c,
	  device/lib/printfl.c,
	  device/lib/sprintf.c,
	  device/lib/vprintf.c:
	  Fix bug #3496.

2022-09-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* device/include/assert.h,
	  device/include/ctype.h,
	  device/include/limits.h,
	  device/include/stdarg.h,
	  device/include/stdbool.h,
	  device/include/stddef.h,
	  device/include/stdlib.h,
	  device/include/uchar.h,
	  device/include/setjmp.h,
	  device/include/stdalign.h,
	  device/include/stdint.h:
	  Replace include guards by C23 header version macros.

2022-09-23 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/peep.c: